--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "screenshot.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "apply": "ts-node ./src/modules/base-agent/baseAgent.ts"
+        "start": "ts-node ./index.ts"
     },
     "author": "HackerHaze",
     "license": "ISC",
